Added other tweaks to the DynamoDB partition implementation including: * Added necessary changes to migrate to AWS SDK v2. * Fixed up the tests to use the JUnit 5 and added tests to get to 80% code coverage. * Addressed code smells. * Fixed the PATCH method to allow adding keys to the partition configuration. * Added JWT parsing and acquiring the user-id header from the authorizaiton header if the header is not set (more of an issue because of the Entitlements CI).